--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "notes",
+  "name": "server",
   "version": "1.0.0",
-  "description": "Notes app",
+  "description": "Notes server",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "node -r esm ./node_modules/.bin/sequelize-cli db:migrate"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,8 @@
     "sequelize-cli": "^6.5.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.15",
     "nodemon": "^2.0.20"
   }
 }
